@@ -1,3 +1,4 @@
+import org.gradle.internal.os.OperatingSystem
 
 /**
  ******************  Script Configuration ******************
@@ -5,7 +6,6 @@
 buildscript {
   repositories {
     jcenter()
-    gradlePluginPortal()
 
     maven {
       url "https://sandec.jfrog.io/artifactory/repo"
@@ -13,8 +13,7 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.sandec.jpro:jpro-plugin-gradle:2021.2.2'
-    classpath 'org.openjfx:javafx-plugin:0.0.10'
+    classpath 'com.sandec.jpro:jpro-plugin-gradle:2021.2.3-SNAPSHOT'
   }
 }
 
@@ -24,7 +23,7 @@ buildscript {
  */
 apply plugin: 'java'
 apply plugin: 'application'
-apply plugin: 'org.openjfx.javafxplugin'
+apply plugin: 'com.google.osdetector'
 
 compileJava {
   sourceCompatibility = 11
@@ -33,13 +32,46 @@ compileJava {
 
 repositories {
   jcenter()
+
+  maven {
+    url "https://sandec.jfrog.io/artifactory/repo"
+  }
 }
 
-javafx {
-    version = '15.0.1'
-    modules = [ 'javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.web' ]
+ext.JAVA_FX_VERSION = "17.0.2-ea+2"
+ext.platform = OperatingSystem.current().isMacOsX() ? 'mac' : OperatingSystem.current().isWindows() ? 'win' : OperatingSystem.current().getName()
+
+dependencies {
+    // Add your dependencies here, for example:
+    // compile group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'
+    compile "org.openjfx:javafx-base:$JAVA_FX_VERSION:$platform"
+    compile "org.openjfx:javafx-graphics:$JAVA_FX_VERSION:$platform"
+    compile "org.openjfx:javafx-controls:$JAVA_FX_VERSION:$platform"
+    compile "org.openjfx:javafx-fxml:$JAVA_FX_VERSION:$platform"
+    compile "org.openjfx:javafx-media:$JAVA_FX_VERSION:$platform"
+    compile "org.openjfx:javafx-web:$JAVA_FX_VERSION:$platform"
+    compile "org.openjfx:javafx-swing:$JAVA_FX_VERSION:$platform"
 }
 
+
+compileJava {
+  doFirst {
+    options.compilerArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.fxml,javafx.controls'
+    ]
+  }
+}
+
+
+run {
+  doFirst {
+    jvmArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.fxml,javafx.controls'
+    ]
+  }
+}
 
 
 /**
